baml_language/crates/baml_tests/snapshots/baml_src/_root.snap
---
source: crates/baml_tests/tests/baml_src.rs
---
function $init() -> null {
    call $init_let_0
    store_global user.google_llm_env.GoogleEnvEnterpriseOptionsClient
    call $init_let_1
    store_global user.parse_companions.ParseCompanionsTestClient
    call $init_let_2
    store_global user.streaming_parsing.StreamParseClient
    call $init_let_3
    store_global user.type_reflection.TestClient
    load_const null
    return
}

function $init_test(registry: unknown) -> null {
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_var ?1
    call ?
    pop 1
    load_const ?
    return
}

function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}
