baml_language/crates/baml_tests/snapshots/baml_src/ai_examples.snap
---
source: crates/baml_tests/tests/baml_src.rs
---
function ai_examples.browser_client(proxy_url: string) -> baml.ai.Provider {
    load_const "gpt-5.4-mini"
    load_const ""
    load_var proxy_url
    load_const null
    load_const null
    load_const null
    init_instance baml.ai.OpenAi .model, .api_key, .base_url, .extra_headers, .extra_body, .append_output_schema
    return
}

function ai_examples.cascaded_voice(stt: ai_examples.Stt, llm: baml.ai.Provider, tts: ai_examples.Tts, audio_url: string) -> string {
    load_var2 1 4
    load_type ai_examples.Stt
    load_const "transcribe"
    virtual_call nargs=2 ntypeargs=0
    store_var text
    load_var llm
    is_type baml.ai.ToolLoop
    pop_jump_if_false L0
    jump L11

  L0:
    load_var llm
    is_type baml.ai.Retry
    pop_jump_if_false L1
    jump L11

  L1:
    load_var llm
    is_type baml.ai.OpenAi
    pop_jump_if_false L2
    jump L11

  L2:
    load_var llm
    is_type baml.ai.Gemini
    pop_jump_if_false L3
    jump L11

  L3:
    load_var llm
    is_type baml.ai.OpenAiResponses
    pop_jump_if_false L4
    jump L11

  L4:
    load_var llm
    is_type baml.ai.RoundRobin
    pop_jump_if_false L5
    jump L11

  L5:
    load_var llm
    is_type baml.ai.Fallback
    pop_jump_if_false L6
    jump L11

  L6:
    load_var llm
    is_type baml.ai.OpenAiStrict
    pop_jump_if_false L7
    jump L11

  L7:
    load_var llm
    is_type baml.ai.Anthropic
    pop_jump_if_false L8
    jump L11

  L8:
    load_var llm
    is_type baml.llm.Client
    pop_jump_if_false L9
    jump L11

  L9:
    load_var llm
    is_type ai_scenarios.EchoProvider
    pop_jump_if_false L10
    jump L11

  L10:
    load_const "llm stage cannot produce a value"
    init_instance baml.errors.Unsupported .message
    throw

  L11:
    load_type string
    load_var2 2 6
    load_type baml.ai.HttpProvider
    load_const "call"
    virtual_call nargs=2 ntypeargs=1
    store_var reply
    load_var2 3 7
    load_type ai_examples.Tts
    load_const "synthesize"
    virtual_call nargs=2 ntypeargs=0
    store_var _0
    load_var _0
    return
}

function ai_examples.describe_tool_kind(kt: ai_examples.KindedTool) -> string {
    load_var kt
    load_field .kind
    discriminant
    jump_table [L3, L2, L1, L0], default L5

  L0: ToolKind.ComputerUse
    load_const "operates a computer"
    jump L4

  L1: ToolKind.Mcp
    load_const "runs on an MCP server"
    jump L4

  L2: ToolKind.Hosted
    load_const "runs provider-side"
    jump L4

  L3: ToolKind.InProcess
    load_const "runs in this process"

  L4:
    return

  L5:
    unreachable
}

function ai_examples.edge_client(gateway_url: string, token: string) -> baml.ai.Provider {
    load_const "gpt-5.4-mini"
    load_var2 2 1
    load_const null
    load_const null
    load_const null
    init_instance baml.ai.OpenAi .model, .api_key, .base_url, .extra_headers, .extra_body, .append_output_schema
    return
}

function ai_examples.image_gen_prompt(description: string) -> string {
    load_const "Generate an image of: "
    load_var description
    bin_op +
    return
}

function ai_examples.image_prompt(url: string) -> string {
    load_var url
    load_const null
    call baml.media.Image.from_url
    call baml.media.Image.url
    store_var _4
    load_var _4
    store_var _3
    load_var _4
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    load_const "(inline)"
    store_var _3

  L0:
    load_const "Describe this image: "
    load_var _3
    bin_op +
    return
}

function ai_examples.negotiate_before_send(p: baml.ai.Provider) -> string {
    load_var p
    is_type baml.ai.OpenAi
    pop_jump_if_false L0
    jump L1

  L0:
    load_const "unknown"
    jump L6

  L1:
    load_var p
    load_type baml.ai.Capabilities
    load_const "structured_output"
    virtual_call nargs=1 ntypeargs=0
    store_var _4
    load_var _4
    discriminant
    load_const Support.Yes
    cmp_int_op ==
    pop_jump_if_false L2
    jump L5

  L2:
    load_var _4
    discriminant
    load_const Support.No
    cmp_int_op ==
    pop_jump_if_false L3
    jump L4

  L3:
    load_const "maybe"
    jump L6

  L4:
    load_const "no"
    jump L6

  L5:
    load_const "yes"

  L6:
    return
}

function ai_examples.observe_pipeline(steps: string[]) -> ai_examples.StepEvent[] {
    load_type ai_examples.StepEvent
    alloc_array 0
    store_var events
    load_type string
    load_var steps
    call baml.iter.Iterable$for$T[].iter
    store_var _3

  L0:
    load_var _3
    is_type baml.iter.Flatten<...>
    pop_jump_if_false L1
    jump L18

  L1:
    load_var _3
    is_type baml.iter.ArrayIterator<...>
    pop_jump_if_false L2
    jump L17

  L2:
    load_var _3
    is_type baml.iter.StepBy<...>
    pop_jump_if_false L3
    jump L16

  L3:
    load_var _3
    is_type baml.iter.Chain<...>
    pop_jump_if_false L4
    jump L15

  L4:
    load_var _3
    is_type baml.iter.Repeat<...>
    pop_jump_if_false L5
    jump L14

  L5:
    load_var _3
    is_type baml.iter.Map<...>
    pop_jump_if_false L6
    jump L13

  L6:
    load_var _3
    is_type baml.iter.Filter<...>
    pop_jump_if_false L7
    jump L12

  L7:
    load_var _3
    is_type baml.iter.FilterMap<...>
    pop_jump_if_false L8
    jump L11

  L8:
    load_var _3
    is_type baml.iter.FlatMap<...>
    pop_jump_if_false L9
    jump L10

  L9:
    load_var _3
    is_type baml.iter.Peekable<...>
    pop_jump_if_false L22
    load_type string
    load_type never
    load_var _3
    call baml.iter.Peekable.Iterator.next
    store_var _5
    jump L19

  L10:
    load_var _3
    make_bound_method baml.iter.FlatMap.Iterator.next
    call_indirect
    store_var _5
    jump L19

  L11:
    load_var _3
    make_bound_method baml.iter.FilterMap.Iterator.next
    call_indirect
    store_var _5
    jump L19

  L12:
    load_type string
    load_type never
    load_type never
    load_var _3
    call baml.iter.Filter.Iterator.next
    store_var _5
    jump L19

  L13:
    load_var _3
    make_bound_method baml.iter.Map.Iterator.next
    call_indirect
    store_var _5
    jump L19

  L14:
    load_type string
    load_var _3
    call baml.iter.Repeat.Iterator.next
    store_var _5
    jump L19

  L15:
    load_type string
    load_type never
    load_type never
    load_var _3
    call baml.iter.Chain.Iterator.next
    store_var _5
    jump L19

  L16:
    load_type string
    load_type never
    load_var _3
    call baml.iter.StepBy.Iterator.next
    store_var _5
    jump L19

  L17:
    load_type string
    load_var _3
    call baml.iter.ArrayIterator.Iterator.next
    store_var _5
    jump L19

  L18:
    load_var _3
    make_bound_method baml.iter.Flatten.Iterator.next
    call_indirect
    store_var _5

  L19:
    load_var _5
    is_type baml.iter.Done
    pop_jump_if_false L20
    jump L21

  L20:
    load_var2 2 4
    load_const "done"
    init_instance user.ai_examples.StepEvent .step, .status
    call baml.Array.push
    pop 1
    jump L0

  L21:
    load_var events
    return

  L22:
    unreachable
}

function ai_examples.run_eval(task: baml.ai.Provider, judge: ai_examples.Scorer, input: string) -> ai_examples.Score {
    load_var task
    is_type baml.ai.ToolLoop
    pop_jump_if_false L0
    jump L11

  L0:
    load_var task
    is_type baml.ai.Retry
    pop_jump_if_false L1
    jump L11

  L1:
    load_var task
    is_type baml.ai.OpenAi
    pop_jump_if_false L2
    jump L11

  L2:
    load_var task
    is_type baml.ai.Gemini
    pop_jump_if_false L3
    jump L11

  L3:
    load_var task
    is_type baml.ai.OpenAiResponses
    pop_jump_if_false L4
    jump L11

  L4:
    load_var task
    is_type baml.ai.RoundRobin
    pop_jump_if_false L5
    jump L11

  L5:
    load_var task
    is_type baml.ai.Fallback
    pop_jump_if_false L6
    jump L11

  L6:
    load_var task
    is_type baml.ai.OpenAiStrict
    pop_jump_if_false L7
    jump L11

  L7:
    load_var task
    is_type baml.ai.Anthropic
    pop_jump_if_false L8
    jump L11

  L8:
    load_var task
    is_type baml.llm.Client
    pop_jump_if_false L9
    jump L11

  L9:
    load_var task
    is_type ai_scenarios.EchoProvider
    pop_jump_if_false L10
    jump L11

  L10:
    load_const "task client cannot produce a value"
    init_instance baml.errors.Unsupported .message
    throw

  L11:
    load_type string
    load_var2 1 3
    load_type baml.ai.HttpProvider
    load_const "call"
    virtual_call nargs=2 ntypeargs=1
    store_var output
    load_var2 2 3
    load_var output
    load_type ai_examples.Scorer
    load_const "score"
    virtual_call nargs=3 ntypeargs=0
    store_var _0
    load_var _0
    return
}

function ai_examples.search_tools(cat: ai_examples.Catalog, query: string) -> baml.ai.Tool[] {
    load_var ?2
    make_cell
    store_var ?2
    load_type baml.ai.Tool
    load_type never
    load_var cat
    load_field .tools
    load_var query
    make_closure .<lambda(search_tools, 0)>, 1
    call baml.Array.filter
    return
}

function ai_examples.security_gated_dispatch(calls: baml.ai.ToolCall[], allowed: string[]) -> baml.ai.ToolResult[] {
    load_type baml.ai.ToolResult
    alloc_array 0
    store_var results
    load_type baml.ai.ToolCall
    load_var calls
    call baml.iter.Iterable$for$T[].iter
    store_var _4

  L0:
    load_var _4
    is_type baml.iter.Flatten<...>
    pop_jump_if_false L1
    jump L18

  L1:
    load_var _4
    is_type baml.iter.ArrayIterator<...>
    pop_jump_if_false L2
    jump L17

  L2:
    load_var _4
    is_type baml.iter.StepBy<...>
    pop_jump_if_false L3
    jump L16

  L3:
    load_var _4
    is_type baml.iter.Chain<...>
    pop_jump_if_false L4
    jump L15

  L4:
    load_var _4
    is_type baml.iter.Repeat<...>
    pop_jump_if_false L5
    jump L14

  L5:
    load_var _4
    is_type baml.iter.Map<...>
    pop_jump_if_false L6
    jump L13

  L6:
    load_var _4
    is_type baml.iter.Filter<...>
    pop_jump_if_false L7
    jump L12

  L7:
    load_var _4
    is_type baml.iter.FilterMap<...>
    pop_jump_if_false L8
    jump L11

  L8:
    load_var _4
    is_type baml.iter.FlatMap<...>
    pop_jump_if_false L9
    jump L10

  L9:
    load_var _4
    is_type baml.iter.Peekable<...>
    pop_jump_if_false L25
    load_type baml.ai.ToolCall
    load_type never
    load_var _4
    call baml.iter.Peekable.Iterator.next
    store_var _6
    jump L19

  L10:
    load_var _4
    make_bound_method baml.iter.FlatMap.Iterator.next
    call_indirect
    store_var _6
    jump L19

  L11:
    load_var _4
    make_bound_method baml.iter.FilterMap.Iterator.next
    call_indirect
    store_var _6
    jump L19

  L12:
    load_type baml.ai.ToolCall
    load_type never
    load_type never
    load_var _4
    call baml.iter.Filter.Iterator.next
    store_var _6
    jump L19

  L13:
    load_var _4
    make_bound_method baml.iter.Map.Iterator.next
    call_indirect
    store_var _6
    jump L19

  L14:
    load_type baml.ai.ToolCall
    load_var _4
    call baml.iter.Repeat.Iterator.next
    store_var _6
    jump L19

  L15:
    load_type baml.ai.ToolCall
    load_type never
    load_type never
    load_var _4
    call baml.iter.Chain.Iterator.next
    store_var _6
    jump L19

  L16:
    load_type baml.ai.ToolCall
    load_type never
    load_var _4
    call baml.iter.StepBy.Iterator.next
    store_var _6
    jump L19

  L17:
    load_type baml.ai.ToolCall
    load_var _4
    call baml.iter.ArrayIterator.Iterator.next
    store_var _6
    jump L19

  L18:
    load_var _4
    make_bound_method baml.iter.Flatten.Iterator.next
    call_indirect
    store_var _6

  L19:
    load_var _6
    is_type baml.iter.Done
    pop_jump_if_false L20
    jump L24

  L20:
    load_var _6
    store_var c
    load_type string
    load_var2 2 6
    load_field .name
    call baml.Array.includes
    pop_jump_if_false L21
    jump L22

  L21:
    load_const "DENIED (policy): "
    load_var c
    load_field .name
    bin_op +
    store_var out
    jump L23

  L22:
    load_const "ran "
    load_var c
    load_field .name
    bin_op +
    store_var out

  L23:
    load_var2 3 6
    load_field .id
    load_var out
    init_instance baml.ai.ToolResult .id, .output
    call baml.Array.push
    pop 1
    jump L0

  L24:
    load_var results
    return

  L25:
    unreachable
}

function ai_examples.server_client() -> baml.ai.Provider {
    load_const "OPENAI_API_KEY"
    sys_op baml.env.get
    store_var _2
    load_var _2
    store_var _1
    load_var _2
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    load_const ""
    store_var _1

  L0:
    load_const "gpt-5.4-mini"
    load_var _1
    load_const null
    load_const null
    load_const null
    load_const null
    init_instance baml.ai.OpenAi .model, .api_key, .base_url, .extra_headers, .extra_body, .append_output_schema
    return
}
