baml_language/crates/baml_tests/snapshots/baml_src/array_length_snapshot.snap
---
source: crates/baml_tests/tests/baml_src.rs
---
function array_length_snapshot.$init_test_ns_array_length_snapshot_array_length_snapshot(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "root.array_length_snapshot"
    load_const "length_binding_snapshots_before_mutation"
    make_closure .<lambda($init_test_ns_array_length_snapshot_array_length_snapshot, 0)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_const null
    return
}

function array_length_snapshot.length_snapshot_bug() -> int {
    load_type int
    alloc_array 0
    store_var a
    load_var a
    container_len
    store_var n
    load_var a
    load_const 9
    call baml.Array.push
    pop 1
    load_var n
    return
}
